--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:airm2m_core_esp32c3]
+[env:esp32-c3-devkitm-1]
 platform = espressif32
-board = airm2m_core_esp32c3
+board = esp32-c3-devkitm-1
 framework = arduino
-lib_deps = 
-	makuna/NeoPixelBus@^2.7.0
-	adafruit/Adafruit NeoPixel@^1.10.5
-	martymacgyver/ESP32 Digital RGB LED Drivers@^1.5.4
+monitor_speed = 115200
+lib_deps = adafruit/Adafruit NeoPixel@^1.10.5
